//
// vim:ts=4:sw=4:ai:et:si:sts=4
//
import "settings.proto";
import "accounts.proto";
import "pcs.proto";

message HavokRequest {
    required uint32 protocol_version = 1;

    enum ReqType {
        GET_SETTING = 0;
        SET_SETTING = 1;
        LOAD_ACCOUNT = 2;
        SAVE_ACCOUNT = 3;
        GET_PC_LIST = 4;
        LOAD_PC = 5;
        SAVE_PC = 6;
    }

    required ReqType request_type = 2;

    // Required for GET_SETTING and SET_SETTING
    optional ReqSettingsType settings_data = 16;

    // Required for LOAD_ACCOUNT, SAVE_ACCOUNT and GET_PC_LIST
    optional ReqAccountType account_data = 17;

    // Required for LOAD_PC and SAVE_PC
    optional ReqPCType pc_data = 18;
}
